--- a/index.css
+++ b/index.css
@@ -450,6 +450,14 @@ html::-webkit-scrollbar-thumb {
     padding: 40px;
   }
 }
+@media (max-width: 875px) {
+  section {
+    padding: 2rem 0;
+  }
+  .home-text h1 {
+    font-size: 2.5rem;
+  }
+}
 @media (max-width: 770px) {
   .home {
     min-height: 500px;
