--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,900&family=Tangerine:wght@700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Serif+Display&family=Dancing+Script:wght@400;700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,900&family=Tangerine:wght@700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
   scroll-padding-top: 3rem;
-  font-family: var(--poppins-font);
+  font-family: var(--font-family-1);
 }
 
 :root {
@@ -16,6 +17,7 @@
   --container-color: #f8e4be;
   --bg-color: #f9f6f2;
   --text-alter-color: #94908e;
+  --font-family-1: "DM Serif Display", serif;
   --poppins-font: "Poppins", sans-serif;
   --font-family-2: "Dancing Script", cursive;
 }
@@ -149,7 +151,7 @@ header {
   transform: rotate(60deg);
 }
 .home-img {
-  max-width: 560px;
+  max-width: 1060px;
   width: 1000%;
 }
 .heading {
@@ -160,7 +162,8 @@ header {
   margin-bottom: 2rem;
 }
 .heading h2 {
-  font-size: 2.2rem;
+  font-family: var(--font-family-1);
+  font-size: 3rem;
   font-weight: 800;
 }
 .service-content {
@@ -191,7 +194,16 @@ header {
   grid-template-columns: repeat(3, 250px);
   justify-content: space-between;
   gap: 2rem;
-  background: #e8d8cd;
+  background: #f8e4be;
+  border-radius: 1.5rem;
+  padding: 40px 60px;
+}
+.team-content {
+  display: grid;
+  grid-template-columns: repeat(3, 250px);
+  justify-content: space-between;
+  gap: 2rem;
+  background: var(--bg-color);
   border-radius: 1.5rem;
   padding: 40px 60px;
 }
@@ -199,6 +211,7 @@ header {
   background: #fff8f7;
   padding: 20px;
   border-radius: 1.5rem;
+  border: 1px solid;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -282,15 +295,11 @@ header {
   margin-bottom: 3.5rem !important;
 }
 .review-box img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  border: 7px solid #fff8f7;
-  object-position: center;
-  box-shadow: 0 4px 16px hsla(355, 25%, 15%, 0.1);
+  width: 100%;
+  object-fit: cover;
 }
 .review-box h2 {
-  font-size: 1rem;
+  font-size: 2rem;
   color: var(--main-color);
   font-family: var(--poppins-font);
   font-weight: 800;
@@ -350,6 +359,12 @@ header {
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
+}
+.book-data a {
+  color: var(--bg-color);
+}
+.book-data a:hover {
+  color: var(--second-color);
 }
 .book-data form {
   display: flex;
@@ -511,6 +526,7 @@ html::-webkit-scrollbar-thumb {
     position: absolute;
     top: 110%;
     left: 50%;
+    transform: translate(-50%);
     width: 90vw;
     background: var(--text-color);
     display: flex;
