--- a/index.css
+++ b/index.css
@@ -66,12 +66,12 @@ header {
 .nav-link {
   font-size: 0.88rem;
   font-weight: 800;
-  color: var(--text-color);
+  color: grey;
   font-family: var(--poppins-font);
   transition: 0.4s all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .nav-link:hover {
-  color: var(--bg-color);
+  color: var(--text-color);
   transition: 0.4s all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .nav-icons {
